docroot/css/mor.css
/*
 ************************************************************
 * HTML tag level settings
 ************************************************************
 */
A:link {text-decoration:none; color:#3150b2; }
A:visited {text-decoration:none; color:#3150b2; }
A:active {text-decoration:none; color:#3150b2; }
A:hover {text-decoration:underline; color:#3399CC; }

body {
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-style:normal;
  font-weight:normal;
  font-size:large;
  word-spacing:normal;
  margin:0px;
  color:#111111;
  background-color: #fefefd;
  background-image: url('../img/texturePaper.png');
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

/*
 ************************************************************
 * general class and id formatting
 * padding: top right bottom left, or topbottom leftright
 ************************************************************
 */

/* topsectiondiv and contained elements */
#mascotdiv { position:absolute; left:10px; top:265px; }
#mascotdivstatic { position:absolute; left:700px; top:140px; }
.mascotimg { vertical-align:middle; width:29px; height:14px; }
#topsectiondiv { padding:0px 10px; background:#fffffd;
  box-shadow:8px 8px 4px #cccccc; height:250px; }
#logodiv {          width:512px; float:left; }
#topworkdiv { margin-left:525px; }
#slidesdiv { height:180px; }
.slideimg { position:absolute; left:535px; margin:auto; padding:auto;
  -webkit-transition: opacity 1s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -o-transition: opacity 1s ease-in-out;
  transition: opacity 1s ease-in-out;
}
#topactionstable { }
#topactionstable td { padding:0px; }
.topnavitemdiv { }

/* main display area and contained elements */
#centerhdiv, #centerhdivstatic { font-size:x-large; font-weight:bold; }
#centerhdiv { display:table; margin:10px auto; }
#centerhdivstatic { margin:0px 0px 0px 240px; }
.instructional { font-size:x-large; font-weight:bold; }
#topdiv { position:absolute; left:72px; top:30px; padding:0px 10px;
  text-align:right; font-size:x-small; }
#accountdiv { font-size:small; }
#appspacediv, #appspacedivstatic { }
#appspacediv { padding:15px 40px 0px 72px; width:80%;}
#appspacedivstatic { padding:0px 15px 10px 5px; }
.statrevcontent { padding-left:15px; padding-top:15px; }
#bottomnav { font-size:x-small; text-align:center; 
  word-spacing:20px; padding:0px 20px 5px 20px; }

.penfont, #homepennamespan, #penhnamespan { 
  font-style:italic; 
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
/* font-family:"Palatino Linotype", "Book Antiqua", "Palatino", serif;
   This was removed because some people have such a strong association
   of serif fonts with formal docs that it was anti-fun for them. 
   ATTENTION: find some kind of a flourish quill pen font for download
   and use that for any browser that can handle it.
*/
 }
#penhnamespan { font-size:xx-large; }
#homepennamespan { font-size:large; }
#penhbuttonspan { padding:0px 0px 0px 20px; }
#acthdiv, #revhdiv {
  background:#ddd url('../img/navlinkback.png') repeat; 
  border: 1px solid #ddd; border-radius:5px; 
  box-shadow: 2px 2px 2px #888; text-shadow: -1px -1px 1px #fff;
  padding:0px 5px; font-size:x-large; visibility:hidden; }
#homepenhdiv { float:left; }
#chead { height:0px; clear:both; }  /* top pad if needed for profile content */
#cmain { clear:both; padding: 8px 0px 0px 0px; }
#overlaydiv { position:absolute; left:70px; top:80px; padding: 10px;
  visibility:hidden; border-radius:10px; max-width:85%;
  box-shadow:10px 10px 5px #888888; border: 1px solid #666666; }
#dlgdiv { position:absolute; left:70px; top:30px; padding:10px 20px;
  background:url('../img/dlgback.png') repeat, #eeeeee url('../img/dlgtop.png') repeat-x;
  visibility:hidden; border-radius:10px; max-width:85%;
  box-shadow:10px 10px 5px #888888; border: 1px solid #666666; }
#closeline { text-align:right; font-size:x-small; }
.navico { margin:0px 0px 0px 14px; padding:4px; vertical-align:bottom; }
.rssico { height:11px; width:11px; vertical-align:middle; padding:0px 5px;}
.svcico, .loginico { height:20px; width:20px; margin:0px 0px 0px 20px; 
  border:none; vertical-align:middle; }

/* intro layout */
#bookslidediv { text-align:center; }
#bookmarkletlinkdiv { padding:5px 20px; }
#logindiv, .centertablediv { display:table; margin:0 auto; }
.altauthspan { display:inline-block; padding:0px; width:60px; }
#closebookslide { clear:both; }

/* profile layout */
#proftopdiv { }
#profshouttd { padding: 0px 10px; }
#profcitytd { font-size:small; padding: 0px 10px 5px 10px; }
.profpic { max-width:125px; max-height:125px; }
#profpictd { width:130px; text-align:right; }
/* fixed width and height on srchpic so the summary lines line up */
.srchpic { width:30px; height:30px; vertical-align:middle; }
.reviewbadge { width:30px; height:30px; vertical-align:middle; }
.revtypeselectiondiv { padding:15px; font-size:x-large; }
.shoutout { width:200px; height:80px; 
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; }
#proftabsdiv ul { list-style:none; padding:0; margin:0; }
#proftabsdiv ul li { display:inline; 
  border-top-left-radius:5px; border-top-right-radius:5px;
  border-top:  1px solid #666;
  border-left: 1px solid #666;
  border-right: 1px solid #666;
 }
#proftabsdiv a { padding: 0 1em; }
.unselectedTab { border-bottom: 1px solid #666; }
.headingtxt { font-size:large; font-weight:bold; text-align:center; }
.formstyle { font-size:small; }
.textright { text-align:right; }
.penlist { list-style:none; padding:0; margin:0; }
.sumtotal { font-size:small; }
#srchmessagespan { font-size:small; }
.smalltext { font-size:small; }
.reviewformul { list-style:none; padding:0; margin:0; }
.revdisptable { margin-left:auto; margin-right:auto; }
.revdisptable td { padding:2px 5px; }
#transformactionstd { padding:2px 5px 10px 5px; }
.revtitle { font-size:large; font-weight:bold; }
.revauthor { font-size:large; font-style:italic; }
.secondaryfield { font-style:italic; }
.revlist { list-style:none; padding:0; margin:0; }
.revlist li { padding:4px; }
.revpic { width:125px; height:125px; }
.revtextsummary { font-size:small; padding: 0px 0px 0px 97px; }
.webjump { width:20px; height:20px; vertical-align:middle; border:none }
.csvstrdiv { padding:5px; }
#actmodediv { padding:0px 0px 20px 0px; }
.bigoverlabel { font-size:large; font-weight:bold; padding:25px 0px 0px 0px; }
#statnoticediv { background:#eee; padding:15px;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; text-align:center;
  border: 1px solid #666666; border-radius:10px; 
  box-shadow:10px 10px 5px #888888; }
.statnoticeactlinktable { margin-left:auto; margin-right:auto; padding:10px; }
.statnoticeactlinktable td { }
/* only actual buttons should look like buttons */
.buttondiv { padding:5px; font-size:large; }
.searchtable td { padding:5px 10px; }
.mainactionstable td { padding:0px 2px; }
#userin, #passin { width:152px; }
.tagline { font-style:italic; color:#333; }
#statrevactdiv { text-align:center; padding:10px; }
/* width: ratstar: 60, type: 50, nbsp separator and padding */
#starstd { text-align:right; width:150px; }
.inlinestarsimg { vertical-align:bottom; }
.starsimg { vertical-align:middle; }
.permalink { font-size:xx-small; }
.actbuttons { padding:10px; }
#chpstatdiv { padding:10px; }
.buttontable { cursor:pointer; }
.buttontable:hover { text-decoration:underline; }
.buttontable td { padding:0px; }
.buttontabletexttd { text-align:left; }
.pennametable td { padding:0px 10px; }
.colorattrtd { font-size:small; text-align:right; }
.colorswatch { height:20px; width:40px; cursor:pointer; }
#colortitlediv { text-align:center; border-top: 1px solid #666; }
#revsavemsg { font-size:x-large; padding:5px; }

/* review layout */
#revfdiv { }

